# JniStudyModule

./: README.md
Jni_01/: settings.gradle
Jni_01/app/: CMakeLists.txt  build.gradle
Jni_01/app/src/androidTest/java/com/study/jni_01/: ExampleInstrumentedTest.java
Jni_01/app/src/main/: AndroidManifest.xml
Jni_01/app/src/main/cpp/: CplusplusStudy01.cpp  JniTest.c  JniTest.h  native-lib.cpp
Jni_01/app/src/main/java/com/study/jni_01/: MainActivity.java
Jni_01/app/src/main/java/jni/: JniTest.java
Jni_01/app/src/main/res/layout/: activity_main.xml
Jni_01/app/src/main/res/values/: strings.xml
Jni_01/app/src/test/java/com/study/jni_01/: ExampleUnitTest.java
Jni_01/gradle/wrapper/: gradle-wrapper.properties
